# gmock_move_types

./: .gitignore  CMakeLists.txt  main.cpp
